[package]
name = "pico"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.3.0", features = [ "rt", "defmt", "time-driver", "critical-section-impl", "rp2040" ] }
embassy-time = "0.4.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
embassy-sync = "0.6.1"
fixed-macro = "1.2.0"
fixed = "1.28.0"
rp-pac = {version = "7.0.0", features = ["rp2040"] }
embassy-futures = "0.1.1"
static_cell = "2.1.0"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
